--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="main">
-  <button mat-raised-button color="primary" (click)="openDialog()">New Employee</button><br><br>
+  <button mat-raised-button color="primary" (click)="openDialog()">New Employee2</button><br><br>
   <app-employee-list [employees]="employees"></app-employee-list>
 </div>
