--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,4 +1,8 @@
-<table mat-table [dataSource]="employees" class="mat-elevation-z8">
+<mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -20,7 +24,7 @@
 
     <ng-container matColumnDef="dateOfBirth">
         <th mat-header-cell *matHeaderCellDef> DateOfBirth </th>
-        <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.dateOfBirth | date:'medium'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="salary">
@@ -36,6 +40,15 @@
     <ng-container matColumnDef="country">
         <th mat-header-cell *matHeaderCellDef> Country </th>
         <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+    </ng-container>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element" class="action-link">
+            <a (click)="openDialog('Update',element)">Edit</a> |
+            <a (click)="openDialog('Delete',element)">Delete</a>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
