--- a/src/app/employee/employee-form/employee-form.component.html
+++ b/src/app/employee/employee-form/employee-form.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add Employee</h1>
+<h1 mat-dialog-title>{{btnLabel}} Employee</h1>
 <form class="example-form" [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
     <div class="example-container">
         <mat-form-field>
@@ -46,7 +46,7 @@
 
     </div>
     <div mat-dialog-actions>
-        <button mat-raised-button color="primary" [disabled]="employeeForm.invalid">Add Employee</button>
+        <button mat-raised-button color="primary" [disabled]="employeeForm.invalid">{{btnLabel}} Employee</button>
         <button mat-raised-button type="button" [mat-dialog-close]="false">Cancel</button>
     </div>
 </form>
