--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -46,8 +46,8 @@
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>  </th>
         <td mat-cell *matCellDef="let element" class="action-link">
-            <a (click)="openDialog('Update',element)"><i class="material-icons md-20">edit</i></a> |
-            <a (click)="openDialog('Delete',element)"><i class="material-icons md-20">delete</i></a>
+            <a style="cursor: pointer;" (click)="openDialog('Update',element)"><i class="material-icons md-20">edit</i></a> |
+            <a style="cursor: pointer;" (click)="openDialog('Delete',element)"><i class="material-icons md-20">delete</i></a>
         </td>
     </ng-container>
 
