--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -44,13 +44,15 @@
 
     <!-- Action Column -->
     <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>  </th>
+        <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element" class="action-link">
-            <a style="cursor: pointer;" (click)="openDialog('Update',element)"><i class="material-icons md-20">edit</i></a> |
-            <a style="cursor: pointer;" (click)="openDialog('Delete',element)"><i class="material-icons md-20">delete</i></a>
+            <a style="cursor: pointer;" (click)="openDialog('Update',element)">
+                <i class="material-icons md-20" style="color: #3f51b5;">edit</i></a> |
+            <a style="cursor: pointer;" (click)="openDialog('Delete',element)">
+                <i class="material-icons md-20" style="color: #3f51b5;">delete</i></a>
         </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef=" displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
