--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -29,7 +29,7 @@
 
     <ng-container matColumnDef="salary">
         <th mat-header-cell *matHeaderCellDef> Salary </th>
-        <td mat-cell *matCellDef="let element"> {{element.salary}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.salary | currency:'₹'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="department">
